merget toWalkullUpdates branch: mainly key issues.
commit 9f13001c6bf88bb7fcdc2cb41c6c338c392b269a
Author: Ubuntu <ubuntu@ip-10-202-62-65.ec2.internal>
Date:   Thu Oct 6 16:02:13 2011 +0000

    fixed issue with ssh keys needed +x permissions.

commit 5024b20ab59839e0fbd1a107bc42d46fb4adb4df
Author: Ubuntu <ubuntu@ip-10-202-62-65.ec2.internal>
Date:   Thu Oct 6 14:18:10 2011 +0000

    updating .bashrc and .aws_keys.

--- a/chef_workstation/README.rdoc
+++ b/chef_workstation/README.rdoc
@@ -1,6 +1,10 @@
 = DESCRIPTION:
 
+chef_workstations - set up walkull with default ssh key in order to allow git interaction, default .bashrc, all git repositries and other code. 
+
 = REQUIREMENTS:
+
+Before running this you must have git, emacs etc, and 
 
 = ATTRIBUTES:
 
